test/errors/ILL-01.tec
!! TECO-64 test script: Test illegal command
!! Commands: ^[
!! Expect: ?ILL
 
                                  !! Test: ^\ command
